# charm-studio

./: .gitignore  README.md  TDD-frontend.md  TDD.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  skills-lock.json
.agents/skills/12factor-charm/: SKILL.md
.agents/skills/12factor-charm/references/: framework-charm-contracts.md
.agents/skills/12factor-charm/scripts/: inspect_env_keys.py
.agents/skills/12factor-fit/: SKILL.md
.agents/skills/12factor-fit/references/: framework-detection.md  question-bank.md
.agents/skills/12factor-fit/scripts/: detect_framework.py  preflight_targets.py
.agents/skills/12factor-rock/: SKILL.md
.github/workflows/: unit-tests.yml
.stitch/: DESIGN.md
.stitch/designs/: import-view.html  manifest.json  pipeline-done.html  pipeline-failed.html  pipeline-running.html
deployment/: concierge.yaml  provision.sh
docs/: AGENTS.md  TDD-frontend.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  custom.scss  main.tsx  types.ts
frontend/src/__tests__/: ImportView.test.tsx  PipelineView.test.tsx  useHistory.test.ts  usePipelineStatus.test.ts
frontend/src/api/: client.ts
frontend/src/components/: NavigationBar.tsx
frontend/src/components/ImportView/: GitTab.tsx  (+3 more)
frontend/src/hooks/: useHistory.ts  usePipelineStatus.ts
snap/: snapcraft.yaml
snap/hooks/: configure  post-refresh
studio_agent/: TDD.md  config.py  log.py  main.py  models.py  requirements.txt  stages.py  tasks.py
studio_agent/tests/: test_api.py  test_stages.py
tests/: test_pipeline_endpoint.py
(+11 files in other folders)
