[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "charm-studio-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "huey>=2.5.1",
    "pydantic>=2.7.0",
    "aiofiles>=23.2.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["studio_agent*"]
